# testing-fast-api

./: .gitignore  index.py  pyproject.toml
db/: bc.txt  db.txt  new.csv
testing_fast_api/: data.py  main.py  users.py
testing_fast_api/tests/: test_testing_fast_api.py
