[tool.poetry]
name = "testing-fast-api"
version = "0.1.0"
description = ""
authors = ["Piertodid <dichiarad@hotmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.58.0"
uvicorn = "^0.11.5"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[tool.poetry.scripts]
main = "testing_fast_api.main:hs"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

